<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="userModel"
            type="com.assignment.data.models.UserModel" />

        <variable
            name="postModel"
            type="com.assignment.data.models.PostModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/albumDetailsSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:isScrollContainer="false"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/detailsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filled_light_grey"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/albumTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{postModel.title}"
                        android:textColor="@color/app_text_ui_color_grey"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/titleLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/title"
                        android:textColor="@color/app_text_ui_color_light_grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/filled_light_grey"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{postModel.body}"
                        android:textColor="@color/app_text_ui_color_grey"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/description"
                        android:textColor="@color/app_text_ui_color_light_grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/app_layout_divider_color" />

                    <LinearLayout
                        android:id="@+id/userDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/userDetailsHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_details"
                            android:textColor="@color/app_text_ui_color_grey"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/filled_light_grey"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{userModel.name}"
                                android:textColor="@color/app_text_ui_color_grey"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/userNameLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/name"
                                android:textColor="@color/app_text_ui_color_light_grey" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/filled_light_grey"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/userEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{userModel.email}"
                                android:textColor="@color/app_text_ui_color_grey"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/userEmailLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/email"
                                android:textColor="@color/app_text_ui_color_light_grey" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/filled_light_grey"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/userPhoneNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{userModel.phone}"
                                android:textColor="@color/app_text_ui_color_grey"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/userPhoneLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/phone"
                                android:textColor="@color/app_text_ui_color_light_grey" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/visitWebsite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/hollow_bg_blue"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/visitWebsiteLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/view_website"
                                android:textColor="@color/blue"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:background="@color/app_layout_divider_color" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/viewPhotosButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/hollow_bg_blue"
                        android:padding="10dp"
                        android:text="@string/show_album_photos"
                        android:textColor="@color/blue"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/albumPhotosRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:visibility="gone" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/app_layout_divider_color" />

                    <TextView
                        android:id="@+id/viewCommentsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/hollow_bg_blue"
                        android:padding="10dp"
                        android:text="@string/show_posts"
                        android:textColor="@color/blue"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/commentsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:visibility="gone" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </FrameLayout>

</layout>